# panchis

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  db.rs  main.rs  printer.rs
src/components/: Button.css  Button.tsx  ClienteForm.tsx  CustomSelect.css  CustomSelect.tsx  ItemForm.tsx  NavBar.tsx  OrdersModal.tsx  PageHeader.tsx  QuantityInput.tsx  Sidebar.tsx  StatCard.tsx  TopBar.tsx
src/hooks/: useDistancia.ts  useUpdater.ts
src/pages/: Clientes.tsx  Items.tsx  Login.tsx  Orders.tsx  Reportes.tsx  Stock.tsx
src/stores/: useAuthStore.ts  useClientsStore.ts  useItemsStore.ts  useOrdersStore.ts  usePrinterStore.ts  useReportsStore.ts  useStockStore.ts  useUIStore.ts
src/styles/: Clientes.css  Items.css  Login.css  Orders.css  Reportes.css  Stock.css  tokens.css
src/types/: index.ts
