[package]
name = "panchis"
version = "0.0.20"
description = "Gestor de órdenes para negocio de panchos"
authors = ["Juando"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serialport = "4.3"
dirs = "5"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
printers = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
